# ml_binary_classification_gridsearch_hyperOpt

./: .aiexclude  .gitignore  .pre-commit-config.yaml  README.md  config_hyperopt.yml  config_single_run.yml  install.bat  install.sh  install_ts.bat  install_ts.sh  installation_log.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_ts.txt  run_ts_tests.sh  setup-hooks.sh  test_data_for_embedding.csv  test_data_for_embedding_supervised.csv
.githooks/: pre-push  pre-push.sh
.github/workflows/: docs.yml  notebook-test.yml  pre-commit.yml
HFE_ML_experiments/2024-02-02_03-54-17_PM/: final_grid_score_log.csv
assets/: data_feature_importance_methods.mmd  data_pipeline.mmd  grid_param_space.mmd  grid_search_cross_validate.mmd  hyperparameter_search.mmd  impute_data_for_pipe.mmd  ml_repository_architecture.mmd  model_class_list_model_class_list_ts.mmd  project_score_save.mmd  results_processing_pipeline.mmd  time_series_helper.mmd  unit_test_synthetic.mmd
docs/: LICENSE  getting_started.md
docs/source/: api_reference.md  conf.py  getting_started.md  index.rst
ml_grid/: __init__.py
ml_grid/model_classes/: AutoGluonClassifier.py  AutoKerasClassifierWrapper.py  FLAMLClassifierWrapper.py  H2OAutoMLClassifier.py  H2OBaseClassifier.py  H2ODRFClassifier.py  H2ODeepLearningClassifier.py  H2OGAMClassifier.py  H2OGBMClassifier.py  H2OGLMClassifier.py  H2ONaiveBayesClassifier.py  H2ORuleFitClassifier.py  H2OStackedEnsembleClassifier.py  H2OXGBoostClassifier.py  NeuralNetworkClassifier_class.py  NeuralNetworkKerasClassifier.py  TPOTClassifierWrapper.py  __init__.py  adaboost_classifier_class.py  auto_gluon_classifier_class.py  auto_keras_classifier_class.py  catboostClassifier.py  catboost_classifier_class.py  flaml_classifier_class.py  gaussiannb_class.py  gradientboosting_classifier_class.py  h2o_classifier_class.py  h2o_deeplearning_classifier_class.py  h2o_drf_classifier_class.py  h2o_gam_classifier_class.py  h2o_gbm_classifier_class.py  h2o_glm_classifier_class.py  h2o_naive_bayes_classifier_class.py  h2o_rulefit_classifier_class.py  h2o_stackedensemble_classifier_class.py  h2o_xgboost_classifier_class.py  keras_classifier_class.py  knn_classifier_class.py  knn_gpu_classifier_class.py  knn_wrapper_class.py  (+13 more)
ml_grid/model_classes_time_series/: ArsenalClassifier_module.py  CNNClassifier_module.py  Catch22Classifer_module.py  ContractableBOSSClassifier_module.py  EncoderClassifier_module.py  FCNClassifier_module.py  FreshPRINCEClassifier_module.py  HIVECOTEV1Classifier_module.py  HIVECOTEV2Classifier_module.py  InceptionTimeClassifer_module.py  IndividualInceptionClassifier_module.py  InidividualTDEClassifier_module.py  KNeighborsTimeSeriesClassifier_module.py  MLPClassifier_module.py  MUSEClassifier_module.py  OrdinalTDEClassifier_module.py  ResNetClassifier_module.py  SignatureClassifier_module.py  SummaryClassifier_module.py  TSFreshClassifier_module.py  TapNetClassifier_module.py  TemporalDictionaryEnsembleClassifier_module.py  TimeSeriesForestClassifier_module.py  elasticEnsembleClassifier_module.py  rocketClassifier_module.py  shapeDTWClassifier_module.py
ml_grid/pipeline/: column_names.py  data.py  data_clean_up.py  data_constant_columns.py  data_correlation_matrix.py  data_feature_importance_methods.py  data_feature_methods.py  data_outcome_list.py  data_percent_missing.py  data_plot_split.py  data_scale.py  data_train_test_split.py  data_ts.py  embeddings.py  grid_search_cross_validate.py  grid_search_cross_validate_ts.py  hierarchical_hyperparameter_search.py  hyperparameter_search.py  logs_project_folder.py  main.py  main_ts.py  model_class_list.py  model_class_list_ts.py  parallel_execute.py  read_in.py  test_data_pipeline.py
ml_grid/results_processing/: core.py  filters.py  plot_algorithms.py  plot_best_model.py  plot_distributions.py  plot_feature_categories.py  plot_features.py  plot_global_importance.py  plot_hyperparameters.py  plot_interactions.py  plot_master.py  plot_pipeline_parameters.py  plot_timeline.py  (+1 more)
notebooks/: Untitled.ipynb  breast_cancer_dataset.csv  config_hyperopt.yml  config_parser.py  config_single_run.yml  grid_score_reader_ML_Grid_V_1.8_unit_test.ipynb  percent_missing_breast_cancer_dataset.pkl  synthetic_sample_100_features_4.csv  test_data_hfe_1yr_m_small_multiclass.csv  test_data_hfe_1yr_m_small_multiclass_percent_missing.pickle  test_notebook.py  unit_test_synthetic.ipynb  unit_test_synthetic_time_series.ipynb  unit_test_synthetic_time_series_data.csv  unit_test_synthetic_time_series_data_large.csv
post_processing/: helper_functions.py
tests/: conftest.py  test_TestConvertXyToTimeSeries.py  test_Test_Add_Date_Order_Sequence_Column.py  test_adjust_knn_fallback.py  test_auto_gluon_classifier.py  test_auto_keras_classifier.py  test_bayes_search_categorical_auto_correct.py  test_column_names.py  test_config.py  test_custom_roc_auc_edge_cases.py  test_data_cache.py  test_data_clean_up_data_handle_duplicated_columns.py  test_data_clean_up_handle_column_names.py  test_data_constant_columns.py  test_data_correlation_matrix_handle.py  test_data_integrity.py  test_data_percent_missing.py  test_data_pipeline.py  test_data_plot_split.py  test_data_scale.py  test_data_test_feature_methods.py  test_data_train_test_split.py  test_db_backend.py  test_debug_print_statements.py  test_embeddings.py  test_flaml_classifier.py  test_force_second_cv.py  test_grid_param_space.py  test_grid_search_cross_validate_exception_paths.py  test_grid_search_cross_validate_ts.py  test_grid_search_cross_validate_ts_comprehensive.py  test_grid_search_cross_validate_ts_optimize_y_cat.py  test_grid_search_cross_validate_ts_uncovered.py  test_grid_search_ts_aeon_import.py  test_grid_search_ts_deep_learning_data.py  test_grid_search_ts_import_error.py  test_grid_search_ts_muse_transform_words.py  test_h2o_automl_classifier.py  test_h2o_base_classifier.py  test_h2o_classifiers.py  (+56 more)
(+25 files in other folders)
