[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-grid"
version = "0.1.0"
description = "A framework for binary classification using grid search and hyperparameter optimization."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Core dependencies for the project to run.
# These should be the minimal set required.
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "hyperopt",
    "ipython",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "catboost",
    "imbalanced-learn",
    "loguru",
    "polars",
    "pyarrow"
]

[project.optional-dependencies]
# Dependencies for running tests, including notebook tests
test = [
    "pytest",
    "nbmake",
    "nbconvert",
    "nbformat"
]
# Additional dependencies for time-series functionality
ts = [
    "aeon",
    "tensorflow",
    "scikeras"
]


[tool.setuptools.packages.find]
include = ["ml_grid"]