[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-grid"
version = "0.1.0"
description = "A framework for binary classification using grid search and hyperparameter optimization."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Core dependencies for the project to run.
# These should be the minimal set required.
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "hyperopt",
    "ipython",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "catboost",
    "imbalanced-learn",
    "loguru",
    "polars",
    "pyarrow",
    "fitter",
    "shap",
    "pydotplus",
    "jinja2",
    "filelock",
    "fsspec",
    "upsetplot",
    "pyimpetus",
    "torch",
    "torchvision",
    "tab-transformer-pytorch",
    "simbsig",
    "google-auth-oauthlib",
    "lxml",
    "pyyaml",
    "sympy",
    "pickleshare"
]

[project.optional-dependencies]
# Dependencies for running tests, including notebook tests
test = [
    "pytest",
    "nbmake",
    "scikit-optimize",
    "h2o",
    "ipywidgets",
    "nbconvert",
    "nbformat",
    "fuzzysearch",
    "ipykernel",
    "tensorflow",
    "scikeras",
    "keras-applications",
    "keras-preprocessing",
    "tensorflow-addons",
    "tensorflow-estimator",
    "tensorflow-intel",
    "tensorboard-plugin-wit"
]
# Additional dependencies for time-series functionality
ts = [
    "aeon[dl]",
    "tensorflow",
    "scikeras",
    "tsfresh",
    "tensorflow-probability[tf]",
    "keras-self-attention",
    "pmdarima",
    "prophet",
    "gluonts",
    "statsmodels"
]

# Dependencies for building documentation
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi",
    "myst-nb"
]


[tool.setuptools.packages.find]
include = ["ml_grid"]